feat:created a new page school system main dashboard page and created some cards and calender

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,4 +85,9 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  .joon-card {
+    @apply flex-1 min-w-[200px]  w-full md:w-1/2 dark:bg-black/15 dark:border-white/20 dark:text-white hover:dark:bg-black/35 hover:bg-white/35
+    bg-white/20 border-black/20 text-black p-3 rounded-lg shadow-lg backdrop-blur-md transition;
+  }
 }
